sfSandBoxCode/force-app/main/default/objects/Windrow__c/Windrow__c.object-meta.xml
<CustomObject>
    <label>Windrow</label>
    <nameField>
        <label>Windrow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Windrows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>