sfSandBoxCode/force-app/main/default/objects/Windrow__c/fields/Expected_Windrow_Weight_Kgs__c.field-meta.xml
<CustomField>
    <fullName>Expected_Windrow_Weight_Kgs__c</fullName>
    <description>Expected Windrow Weight - Total Dry Weight of all Windrow Runs</description>
    <inlineHelpText>Expected Windrow Weight - Total Dry Weight of all Windrow Runs</inlineHelpText>
    <label>Expected Windrow Weight(Kgs)</label>
    <summarizedField>Windrow_Run__c.Dry_Weight_of_Waste_Kg__c</summarizedField>
    <summaryForeignKey>Windrow_Run__c.Windrow__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>