sfSandBoxCode/force-app/main/default/objects/Windrow__c/fields/Maturity_period__c.field-meta.xml
<CustomField>
    <fullName>Maturity_period__c</fullName>
    <description>the time taken for the windrow to mature</description>
    <inlineHelpText>Enter the number of weeks it would take the Windrow to mature</inlineHelpText>
    <label>Maturity period(weeks)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>