sfSandBoxCode/force-app/main/default/objects/Windrow__c/fields/Passed_Maturity_Test__c.field-meta.xml
<CustomField>
    <fullName>Passed_Maturity_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirm that windrow has passed maturity test</description>
    <inlineHelpText>Confirm that windrow has passed maturity test</inlineHelpText>
    <label>Passed Maturity Test</label>
    <type>Checkbox</type>
</CustomField>