sfSandBoxCode/force-app/main/default/objects/Windrow__c/fields/Total_Corn_Cobs_Kgs__c.field-meta.xml
<CustomField>
    <fullName>Total_Corn_Cobs_Kgs__c</fullName>
    <description>Total Corn Cobs(Kgs)</description>
    <inlineHelpText>Total Corn Cobs(Kgs)</inlineHelpText>
    <label>Total Corn Cobs(Kgs)</label>
    <summarizedField>Windrow_Run__c.Corn_Cobs_Kg__c</summarizedField>
    <summaryForeignKey>Windrow_Run__c.Windrow__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>