sfSandBoxCode/force-app/main/default/objects/Windrow__c/fields/Total_FLI_Waste_Kgs__c.field-meta.xml
<CustomField>
    <fullName>Total_FLI_Waste_Kgs__c</fullName>
    <description>Total FLI Waste Used</description>
    <inlineHelpText>Total FLI Waste Used</inlineHelpText>
    <label>Total FLI Waste(Kgs)</label>
    <summarizedField>Windrow_Run__c.FLI_Waste__c</summarizedField>
    <summaryForeignKey>Windrow_Run__c.Windrow__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>