sfSandBoxCode/force-app/main/default/objects/Windrow__c/fields/Total_Lime_Added_Kgs__c.field-meta.xml
<CustomField>
    <fullName>Total_Lime_Added_Kgs__c</fullName>
    <description>Total Lime Added to the Windrow</description>
    <inlineHelpText>Total Lime Added to the Windrow</inlineHelpText>
    <label>Total Lime Added(Kgs)</label>
    <summarizedField>Windrow_Run__c.Lime_to_Add_Kg__c</summarizedField>
    <summaryForeignKey>Windrow_Run__c.Windrow__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>