sfSandBoxCode/force-app/main/default/objects/Windrow__c/fields/Total_Packaged_Weight_Kgs__c.field-meta.xml
<CustomField>
    <fullName>Total_Packaged_Weight_Kgs__c</fullName>
    <description>Total Packaged Weight so far</description>
    <inlineHelpText>Total Packaged Weight so far</inlineHelpText>
    <label>Total Packaged Weight(Kgs)</label>
    <summarizedField>Windrow_Bagging__c.Total_Weight_Bagged_Kg__c</summarizedField>
    <summaryForeignKey>Windrow_Bagging__c.Windrow__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>