sfSandBoxCode/force-app/main/default/objects/Windrow__c/fields/Total_Wet_Weight_Kgs__c.field-meta.xml
<CustomField>
    <fullName>Total_Wet_Weight_Kgs__c</fullName>
    <description>Total Wet Weight(Kgs)</description>
    <inlineHelpText>Total Wet Weight(Kgs)</inlineHelpText>
    <label>Total Wet Weight(Kgs)</label>
    <summarizedField>Windrow_Run__c.Total_Waste_and_Feedstock_Kg__c</summarizedField>
    <summaryForeignKey>Windrow_Run__c.Windrow__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>