sfSandBoxCode/force-app/main/default/objects/Windrow__c/fields/Windrow_created_date__c.field-meta.xml
<CustomField>
    <fullName>Windrow_created_date__c</fullName>
    <description>This is the date the Windrow was created on site</description>
    <inlineHelpText>click in the field and select a date from the calendar</inlineHelpText>
    <label>Windrow created date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>