sfSandBoxCode/force-app/main/default/objects/Windrow__c/fields/Windrow_Name_Check__c.field-meta.xml
<CustomField>
    <fullName>Windrow_Name_Check__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Used in a WFR to check if the Windrow name exists</description>
    <label>Windrow Name Check</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>