sfSandBoxCode/force-app/main/default/objects/Windrow__c/fields/Windrow_Status__c.field-meta.xml
<CustomField>
    <fullName>Windrow_Status__c</fullName>
    <inlineHelpText>click in the picklist and select a status from the list</inlineHelpText>
    <label>Windrow Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Drying</fullName>
            </value>
            <value>
                <fullName>Decomposing</fullName>
            </value>
            <value>
                <fullName>Documentation Requested</fullName>
            </value>
            <value>
                <fullName>Not able to sale</fullName>
            </value>
            <value>
                <fullName>Available for Packaging</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>