sfSandBoxCode/force-app/main/default/objects/Windrow__c/fields/Windrow_Weight__c.field-meta.xml
<CustomField>
    <fullName>Windrow_Weight__c</fullName>
    <description>Enter the weight of the window in tonnes</description>
    <label>Windrow Weight(tonnes)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>