sfSandBoxCode/force-app/main/default/objects/Windrow__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Windrow_Status__c</columns>
    <columns>Windrow_Weight__c</columns>
    <columns>Maturity_period__c</columns>
    <columns>Windrow_created_date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>